# nix-repo-base

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  2026-06-12-nix-repo-base-deepdive.md  CLAUDE.md  README.md  flake.nix  justfile  treefmt.nix  update-locks.sh
.beads/: .gitignore  config.yaml  metadata.json
.claude-plugin/: marketplace.json
.claude/skills/: core.gc-agents  core.gc-city  core.gc-dashboard  core.gc-dispatch  core.gc-mail  core.gc-rigs  core.gc-work
.gc/: .gitignore  settings.json
.github/workflows/: ci.yml  update-flakes-reusable.yml  update-flakes.yml
.update-locks/steps/: nix-flake-update
capability-model/.claude-plugin/: plugin.json
darwin/: default.nix
docs/: claude-marketplaces.md  pn-store.md  using-mkGoBuilders.md  worktrees.md
docs/adr/: 0000-use-architecture-decision-records.md  0001-purpose-of-this-repo.md  0002-pn-workspace-toml-schema.md  0003-claude-marketplace-convention.md  0004-pn-workspace-init-scope.md  0005-mkGoBuilders-factory.md  0006-source-content-digest-versioning.md  0007-local-replace-go-modules-overlay.md  0008-adopt-gomod2nix-for-go-packages.md  0009-pn-workspace-update-worktree-isolation.md  0010-claude-marketplace-builder-and-identity.md  0011-source-digest-in-derivation-version.md  0012-pn-applied-state-store-and-info-api.md  0013-activation-output-convention.md  0014-activation-output-home-manager.md  0015-activation-color-default-on.md  0016-gitignore-generated-pre-commit-config.md  index.md  (+7 more)
flake-modules/: checks.nix  devshell.nix  pre-commit.nix  treefmt.nix
home-modules/: install-metadata.nix
lib/: activation-tests.nix  activation.nix  bash-builders-injection-tests.nix  bash-builders-smoke-tests.nix  bash-builders-version-tests.nix  bash-builders.nix  capabilities.nix  claude-marketplace-tests.nix  claude-marketplace.nix  go-builders.nix  python-factory-currying-tests.nix  python-package-drift-tests.nix  python-package-resolve-tests.nix  python-package-version-tests.nix  python-package.nix  ul-pin-tests.nix  ul-pin.nix  version-tests.nix  version.nix
lib/fixtures/py-lock-pin/: pyproject.toml
lib/fixtures/py-lock-pin/src/py_lock_pin/: __init__.py
lib/fixtures/py-missing-dep/: pyproject.toml
lib/fixtures/py-missing-dep/src/py_missing_dep/: __init__.py
nix/: checks.nix  dev-env.nix  module-helpers.nix  packages.nix
pn-workspace-rules/: CLAUDE.md  USER_JOURNEYS.md
scripts/: sync-repo-settings.sh
testdata/: pn-workspace-reference.toml
tests/: capability-framework.nix
(+551 files in other folders)
